--- a/src/widget.css
+++ b/src/widget.css
@@ -12,18 +12,6 @@
     height: max-content;
 }
 
-.projecttable-widget {
-    width: 60rem;
-    height: auto;
-}
-
-.project-list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 1rem;
-}
-
 .nobr {
     display: inline;
 }
